--- a/src/main/resources/database/mysql_jdbc.properties
+++ b/src/main/resources/database/mysql_jdbc.properties
@@ -11,8 +11,8 @@ jdbc.driver=com.mysql.jdbc.Driver
 
 # openshift database
 jdbc.url=jdbc:mysql://Host:3306/database-Name?characterEncoding=utf-8&autoReconnect=true
-jdbc.username=name
-jdbc.password=password
+jdbc.username=userTJW
+jdbc.password=wfdqmdPYeiH6kKKy
 
 ##DataSource Global Setting
 #配置初始化大小、最小、最大
